@@ -10,6 +10,7 @@ Improvements:
    xsession_errors (match lines from ~/.xsession-errors)
    shared_libraries (determine which libraries a binary links with)
    links_with_shared_library (test if a binary links with a particular library)
+ - New CrashDatabase API: get_affected_packages()
 
 1.9.6 (2009-12-01)
 ------------------
